Test-Score Backend complete Synchronisation Added to Student Activity Front End

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,7 @@ android {
 
 dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.1'
+    implementation 'com.github.AnyChart:AnyChart-Android:1.0.3'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'com.android.support:cardview-v7:27.1.1'
