--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,9 @@ android {
 dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.1'
     implementation 'com.github.AnyChart:AnyChart-Android:1.0.3'
+    implementation 'com.jjoe64:graphview:4.2.2'
+    implementation 'com.github.shubhamphal:MaterialAbout:0.2.3'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'com.android.support:cardview-v7:27.1.1'
@@ -31,5 +34,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
 }
 apply plugin: 'com.google.gms.google-services'
