--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,8 @@ dependencies {
     implementation 'com.jjoe64:graphview:4.2.2'
     implementation 'com.github.shubhamphal:MaterialAbout:0.2.3'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+    implementation 'com.tomer:fadingtextview:2.5'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
